# poke-duck

./: bun.lockb  package.json
src/: App.tsx  ProjectInfo.tsx  ProjectList.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  user_applications.rs
src/components/: Icon.tsx
